# ChangeLog for dev-util/meld
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/meld/ChangeLog,v 1.183 2014/07/23 15:16:02 ago Exp $

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> meld-1.8.5.ebuild:
  Stable for x86, wrt bug #512012

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> meld-1.8.5.ebuild:
  Stable for amd64, wrt bug #512912

*meld-1.8.5 (31 May 2014)

  31 May 2014; Pacho Ramos <pacho@gentoo.org> +meld-1.8.5.ebuild:
  Version bump

  26 Apr 2014; Pacho Ramos <pacho@gentoo.org> -meld-1.7.0.ebuild,
  -meld-1.8.1.ebuild, -meld-1.8.2.ebuild:
  drop old

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> meld-1.8.4.ebuild:
  x86 stable, bug 499954

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> meld-1.8.4.ebuild:
  amd64 stable, bug 499954

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> meld-1.8.4.ebuild:
  Fix wrong commit, bug 502160

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> meld-1.8.4.ebuild:
  arch stable, bug 888

*meld-1.8.4 (06 Feb 2014)

  06 Feb 2014; Gilles Dartiguelongue <eva@gentoo.org> +meld-1.8.4.ebuild:
  Version bump.

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> meld-1.8.2.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> meld-1.8.2.ebuild:
  amd64 stable, bug #478252

*meld-1.8.2 (18 Oct 2013)

  18 Oct 2013; Pacho Ramos <pacho@gentoo.org> +meld-1.8.2.ebuild,
  -meld-1.8.0.ebuild:
  Version bump, drop old

*meld-1.8.1 (28 Sep 2013)

  28 Sep 2013; Pacho Ramos <pacho@gentoo.org> +meld-1.8.1.ebuild,
  -meld-1.7.4.ebuild, -meld-1.7.5.ebuild:
  Version bump, drop old

*meld-1.8.0 (15 Sep 2013)

  15 Sep 2013; Gilles Dartiguelongue <eva@gentoo.org> -meld-1.7.3.ebuild,
  +meld-1.8.0.ebuild:
  Version bump. Cleanup old revision.

*meld-1.7.5 (01 Sep 2013)

  01 Sep 2013; Gilles Dartiguelongue <eva@gentoo.org> +meld-1.7.5.ebuild:
  Version bump.

*meld-1.7.4 (28 Jul 2013)

  28 Jul 2013; Pacho Ramos <pacho@gentoo.org> +meld-1.7.4.ebuild,