@@ -1,1 +1,1 @@
-DIST meld-1.8.5.tar.xz 444872 SHA256 e0f1d6007117a4be95d7c399359cb2ebfa80f2b9158222d727e9a35ae4d5d44d SHA512 09b36923fedfb8f67dd120a71a1fb591efd812b8e1e451281ffee639ce02a7c8fd0d280254c5270ec547df38a30c53a309a7749fa2a63093bd3cf8f46195332b WHIRLPOOL 3ae3bafcc99a57e794d7b3d4e794d31b70257cc20800093932d8f5e9ceca3aee9bbe49a80382ef6b206bac23f20e153904c2a074a66fc69fc803354f44bdc858
+DIST meld-3.11.2.tar.xz 441656 SHA256 2f2d431b75c601bdcd5cf3b2df468edbbde038e7b31e363f316a9ffc0199495b SHA512 4b9b13a42bb081de805bc55c89557e70d359f83a139ef7abc94648c640e98363f8b356d00db2448619a26eb67f7edab8edb171717ea4cc8aea7028c6a6b4eccd WHIRLPOOL 67652d5c3eabc4adb48c269f3e0194660ab4b0e52cf12044237bb0ed33b88199ff611cadb416e15b523d880f2c53d319ef31a61932a5c2e5ca531dca90a28a0b
