@@ -1,0 +1,37 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+EAPI="5"
+PYTHON_COMPAT=( python2_7 )
+DISTUTILS_SINGLE_IMPL=1
+
+inherit gnome2 distutils-r1
+
+DESCRIPTION="A graphical diff and merge tool"
+HOMEPAGE="http://meldmerge.org/"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+RDEPEND="
+	${PYTHON_DEPS}
+	dev-libs/glib:2[${PYTHON_USEDEP}]
+	dev-python/dbus-python[${PYTHON_USEDEP}]
+	dev-python/pygobject[${PYTHON_USEDEP}]
+	gnome-base/gsettings-desktop-schemas
+	>=x11-libs/gtk+-3.6.0:3
+	>=x11-libs/gtksourceview-3.6.0:3.0
+	x11-themes/hicolor-icon-theme
+"
+DEPEND="${RDEPEND}
+	sys-devel/gettext
+	dev-util/intltool
+	dev-util/itstool
+"
+
+python_compile_all() {
+	mydistutilsargs=( --no-update-icon-cache --no-compile-schemas )
+}
