@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>gnome</herd>
-	<use>
-		<flag name="highlight">Enable source code highlighting via
-			<pkg>dev-python/pygtksourceview</pkg></flag>
-	</use>
+  <maintainer>
+    <email>poncho@spahan.ch</email>
+    <name>Poncho</name>
+  </maintainer>
 </pkgmetadata>
