@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-util/meld/ChangeLog,v 1.183 2014/07/23 15:16:02 ago Exp $
 
+*meld-3.11.2 (21 Aug 2014)
+
+  21 Aug 2014; Poncho <poncho@spahan.ch> +meld-3.11.2.ebuild,
+  -meld-1.8.5.ebuild, metadata.xml:
+  dev-util/meld: version bump
+
   23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> meld-1.8.5.ebuild:
   Stable for x86, wrt bug #512012
 
